--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mein Audio Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>Max Mustermann</h1>
+    <nav>
+      <a href="#about">Über mich</a>
+      <a href="#projects">Projekte</a>
+      <a href="#contact">Kontakt</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section id="hero">
+    <h2>Sound Designer & Audio Programmer</h2>
+    <p>Ich erstelle immersive Klangwelten für Games, Film und Apps.</p>
+  </section>
+
+  <!-- Über mich -->
+  <section id="about">
+    <h2>Über mich</h2>
+    <p>Ich arbeite seit X Jahren in Sound Design, Audio-Produktion und Programmierung. Tools: Ableton, Pro Tools, Max/MSP, C++.</p>
+  </section>
+
+  <!-- Projekte / Portfolio -->
+  <section id="projects">
+    <h2>Projekte</h2>
+
+    <!-- Beispiel Projekt 1 -->
+    <div class="project">
+      <img src="assets/images/projekt1.png" alt="Projekt 1 Screenshot">
+      <h3>Projekt 1: Game Soundscape</h3>
+      <p>Beschreibung des Projekts, eingesetzte Tools & Technologien.</p>
+      <audio controls>
+        <source src="assets/audio/projekt1.mp3" type="audio/mpeg">
+      </audio>
+    </div>
+
+    <!-- Beispiel Projekt 2 -->
+    <div class="project">
+      <img src="assets/images/projekt2.png" alt="Projekt 2 Screenshot">
+      <h3>Projekt 2: App Audio Engine</h3>
+      <p>Beschreibung des Projekts, eingesetzte Tools & Technologien.</p>
+      <video controls width="500">
+        <source src="assets/videos/projekt2.mp4" type="video/mp4">
+      </video>
+    </div>
+
+  </section>
+
+  <!-- Kontakt -->
+  <footer id="contact">
+    <h2>Kontakt</h2>
+    <p>Email: <a href="mailto:mail@beispiel.de">mail@beispiel.de</a></p>
+    <p>LinkedIn | GitHub | SoundCloud</p>
+  </footer>
+
+</body>
+</html>
 
