--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero Section mit Hintergrundbild -->
   <section id="hero">
+    <h1>Max Mustermann</h1>
     <h2>Sound Designer & Audio Programmer</h2>
     <p>Ich erstelle immersive Klangwelten für Games, Film und Apps.</p>
+    <a href="#projects" class="btn">Meine Projekte</a>
   </section>
 
   <!-- Über mich -->
@@ -34,7 +36,7 @@
   <section id="projects">
     <h2>Projekte</h2>
 
-    <!-- Beispiel Projekt 1 -->
+    <!-- Projekt 1 -->
     <div class="project">
       <img src="assets/images/projekt1.png" alt="Projekt 1 Screenshot">
       <h3>Projekt 1: Game Soundscape</h3>
@@ -44,7 +46,7 @@
       </audio>
     </div>
 
-    <!-- Beispiel Projekt 2 -->
+    <!-- Projekt 2 -->
     <div class="project">
       <img src="assets/images/projekt2.png" alt="Projekt 2 Screenshot">
       <h3>Projekt 2: App Audio Engine</h3>
@@ -56,7 +58,7 @@
 
   </section>
 
-  <!-- Kontakt -->
+  <!-- Footer / Kontakt -->
   <footer id="contact">
     <h2>Kontakt</h2>
     <p>Email: <a href="mailto:mail@beispiel.de">mail@beispiel.de</a></p>
@@ -65,4 +67,5 @@
 
 </body>
 </html>
+
 
