--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Header -->
   <header>
-    <h1>Max Mustermann</h1>
+    <h1>Jasper Kempf</h1>
     <nav>
       <a href="#about">Über mich</a>
       <a href="#projects">Projekte</a>
@@ -20,8 +20,8 @@
 
   <!-- Hero Section mit Hintergrundbild -->
   <section id="hero">
-    <h1>Max Mustermann</h1>
-    <h2>Sound Designer & Audio Programmer</h2>
+    <h1>Jasper Kempf</h1>
+    <h2>Sound Designer & Audio Production</h2>
     <p>Ich erstelle immersive Klangwelten für Games, Film und Apps.</p>
     <a href="#projects" class="btn">Meine Projekte</a>
   </section>
@@ -29,7 +29,7 @@
   <!-- Über mich -->
   <section id="about">
     <h2>Über mich</h2>
-    <p>Ich arbeite seit X Jahren in Sound Design, Audio-Produktion und Programmierung. Tools: Ableton, Pro Tools, Max/MSP, C++.</p>
+    <p>Ich arbeite seit X Jahren in Sound Design, Audio-Produktion und Programmierung. Tools: Ableton, Max/MSP, Pure Data / Plug Data, Arduino.</p>
   </section>
 
   <!-- Projekte / Portfolio -->
