--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mein Audio Portfolio</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <!-- Header -->
   <header>
-    <h1>Jasper Kempf</h1>
+    <h1>Max Mustermann</h1>
     <nav>
       <a href="#about">Über mich</a>
       <a href="#projects">Projekte</a>
@@ -21,10 +20,10 @@
     </nav>
   </header>
 
-  <!-- Hero Section mit Hintergrundbild -->
+  <!-- Hero Section -->
   <section id="hero">
-    <h1>Jasper Kempf</h1>
-    <h2>Sound Designer & Audio Production</h2>
+    <h1>Max Mustermann</h1>
+    <h2>Sound Designer & Audio Programmer</h2>
     <p>Ich erstelle immersive Klangwelten für Games, Film und Apps.</p>
     <a href="#projects" class="btn">Meine Projekte</a>
   </section>
@@ -32,7 +31,7 @@
   <!-- Über mich -->
   <section id="about">
     <h2>Über mich</h2>
-    <p>Ich arbeite seit X Jahren in Sound Design, Audio-Produktion und Programmierung. Tools: Ableton, Max/MSP, Pure Data / Plug Data, Arduino.</p>
+    <p>Ich arbeite seit X Jahren in Sound Design, Audio-Produktion und Programmierung. Tools: Ableton, Pro Tools, Max/MSP, C++.</p>
   </section>
 
   <!-- Projekte / Portfolio -->
@@ -70,5 +69,3 @@
 
 </body>
 </html>
-
-
