--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Header -->
   <header>
-    <h1>Max Mustermann</h1>
+    <h1>Jasper Kempf</h1>
     <nav>
       <a href="#about">Über mich</a>
       <a href="#projects">Projekte</a>
@@ -22,7 +22,7 @@
 
   <!-- Hero Section -->
   <section id="hero">
-    <h1>Max Mustermann</h1>
+    <h1>Jasper Kempf</h1>
     <h2>Sound Designer & Audio Programmer</h2>
     <p>Ich erstelle immersive Klangwelten für Games, Film und Apps.</p>
     <a href="#projects" class="btn">Meine Projekte</a>
