--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Header -->
   <header>
-    <h1>Jasper Kempf</h1>
+    <h1>Portfolio</h1>
     <nav>
       <a href="#about">Über mich</a>
       <a href="#projects">Projekte</a>
@@ -23,20 +23,20 @@
   <!-- Hero Section -->
   <section id="hero">
     <h1>Jasper Kempf</h1>
-    <h2>Sound Designer & Audio Programmer</h2>
-    <p>Ich erstelle immersive Klangwelten für Games, Film und Apps.</p>
+    <h2>Sound Design & Audio Programming</h2>
+    <p>Welcome to my Portfolio!</p>
     <a href="#projects" class="btn">Meine Projekte</a>
   </section>
 
   <!-- Über mich -->
   <section id="about">
-    <h2>Über mich</h2>
-    <p>Ich arbeite seit X Jahren in Sound Design, Audio-Produktion und Programmierung. Tools: Ableton, Pro Tools, Max/MSP, C++.</p>
+    <h2>About Me</h2>
+    <p>Text and Tools i use.</p>
   </section>
 
   <!-- Projekte / Portfolio -->
   <section id="projects">
-    <h2>Projekte</h2>
+    <h2>Projects</h2>
 
     <!-- Projekt 1 -->
     <div class="project">
