--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <header>
     <h1>Jasper Kempf</h1>
     <nav>
-      <a href="#about">Über mich</a>
-      <a href="#projects">Projekte</a>
-      <a href="#contact">Kontakt</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -25,7 +25,7 @@
     <h1>Portfolio</h1>
     <h2>Sound Design & Audio Programming</h2>
     <p>Welcome to my Portfolio!</p>
-    <a href="#projects" class="btn">Meine Projekte</a>
+    <a href="#projects" class="btn">My Projects</a>
   </section>
 
   <!-- Über mich -->
@@ -40,7 +40,7 @@
 
     <!-- Projekt 1 -->
     <div class="project">
-      <img src="assets/images/projekt1.png" alt="Projekt 1 Screenshot">
+      <img src="assets/images/projekt1.png" alt="Project 1">
       <h3>Projekt 1: Game Soundscape</h3>
       <p>Beschreibung des Projekts, eingesetzte Tools & Technologien.</p>
       <audio controls>
