--- a/index.html
+++ b/index.html
@@ -34,31 +34,25 @@
     <p>Text and Tools i use.</p>
   </section>
 
-  <!-- Projekte / Portfolio -->
-  <section id="projects">
-    <h2>Projects</h2>
+<section id="projects">
+  <h2>Projekte</h2>
 
-    <!-- Projekt 1 -->
-    <div class="project">
-      <img src="assets/images/projekt1.png" alt="Project 1">
+  <!-- Projekt 1 -->
+  <div class="project-card">
+    <a href="project1.html">
+      <img src="assets/images/projekt1-thumb.png" alt="Projekt 1 Vorschaubild">
       <h3>Projekt 1: Game Soundscape</h3>
-      <p>Beschreibung des Projekts, eingesetzte Tools & Technologien.</p>
-      <audio controls>
-        <source src="assets/audio/projekt1.mp3" type="audio/mpeg">
-      </audio>
-    </div>
+    </a>
+  </div>
 
-    <!-- Projekt 2 -->
-    <div class="project">
-      <img src="assets/images/projekt2.png" alt="Projekt 2 Screenshot">
+  <!-- Projekt 2 -->
+  <div class="project-card">
+    <a href="project2.html">
+      <img src="assets/images/projekt2-thumb.png" alt="Projekt 2 Vorschaubild">
       <h3>Projekt 2: App Audio Engine</h3>
-      <p>Beschreibung des Projekts, eingesetzte Tools & Technologien.</p>
-      <video controls width="500">
-        <source src="assets/videos/projekt2.mp4" type="video/mp4">
-      </video>
-    </div>
-
-  </section>
+    </a>
+  </div>
+</section>
 
   <!-- Footer / Kontakt -->
   <footer id="contact">
