--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <!-- Projekt 1 -->
   <div class="project-card">
     <a href="project1.html">
-      <img src="assets/images/projekt1-thumb.png" alt="Projekt 1 Vorschaubild">
-      <h3>Projekt 1: Game Soundscape</h3>
+      <img src="assets/images/Greed-01.png" alt="Projekt 1 Vorschaubild">
+      <h3>Greed</h3>
     </a>
   </div>
 
