--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Projekt 1 -->
   <div class="project-card">
     <a href="project1.html">
-      <img src="assets/images/Greed-01.png" alt="Projekt 1 Vorschaubild">
+      <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1 Vorschaubild">
       <h3>Greed</h3>
     </a>
   </div>
@@ -48,10 +48,19 @@
   <!-- Projekt 2 -->
   <div class="project-card">
     <a href="project2.html">
-      <img src="assets/images/projekt2-thumb.png" alt="Projekt 2 Vorschaubild">
+      <img src="assets/images/Moai-01.png" alt="Projekt 2 Vorschaubild">
       <h3>Projekt 2: App Audio Engine</h3>
     </a>
   </div>
+
+  <!-- Projekt 3 -->
+  <div class="project-card">
+    <a href="project2.html">
+      <img src="assets/images/Greed-01.png" alt="Projekt 2 Vorschaubild">
+      <h3>Projekt 2: App Audio Engine</h3>
+    </a>
+  </div>
+  
 </section>
 
   <!-- Footer / Kontakt -->
