--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
   
 </section>
 
+<div class="project-category">
+  <h3>🎧 Sound Design</h3>
+  <div class="project-carousel">
+    <div class="project-card">
+      <a href="projekt1.html">
+        <img src="assets/images/projekt1-thumb.png" alt="Projekt 1">
+        <h4>Projekt 1: Game Soundscape</h4>
+      </a>
+    </div>
+    <div class="project-card">
+      <a href="projekt2.html">
+        <img src="assets/images/projekt2-thumb.png" alt="Projekt 2">
+        <h4>Projekt 2: UI Sound Pack</h4>
+      </a>
+    </div>
+    <!-- weitere Cards -->
+  </div>
+</div>
+  
   <!-- Footer / Kontakt -->
   <footer id="contact">
     <h2>Kontakt</h2>
