--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
         <h4>Projekt 2: UI Sound Pack</h4>
       </a>
     </div>
+    <div class="project-card">
+      <a href="projekt3.html">
+        <img src="assets/images/projekt2-thumb.png" alt="Projekt 2">
+        <h4>Projekt 2: UI Sound Pack</h4>
+      </a>
+    </div>
+    <div class="project-card">
+      <a href="projekt4.html">
+        <img src="assets/images/projekt2-thumb.png" alt="Projekt 2">
+        <h4>Projekt 2: UI Sound Pack</h4>
+      </a>
+    </div>
     <!-- weitere Cards -->
   </div>
 </div>
