--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
     <!-- Projekt Kategorien -->
 
 <div class="project-category">
-  <h3>🎧 Sound Design</h3>
+  <h3>Sound Design</h3>
   <div class="project-carousel">
     <div class="project-card">
       <a href="projekt1.html">
-        <img src="assets/images/projekt1-thumb.png" alt="Projekt 1">
+        <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1">
         <h4>Projekt 1: Game Soundscape</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt2.html">
-        <img src="assets/images/projekt2-thumb.png" alt="Projekt 2">
+        <img src="assets/images//Moai-01.png" alt="Projekt 2">
         <h4>Projekt 2: UI Sound Pack</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt3.html">
-        <img src="assets/images/projekt2-thumb.png" alt="Projekt 2">
-        <h4>Projekt 2: UI Sound Pack</h4>
+        <img src="assets/images/Greed-01.png" alt="Projekt 2">
+        <h4>Projekt 3: Greed</h4>
       </a>
     </div>
     <div class="project-card">
