--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   
 </section>
   
-    <!-- Projekt Kategorien -->
-
+<!-- Projekt Kategorien -->
+<!-- Projekt Kategorien 01 -->
 <div class="project-category">
   <h3>Sound Design</h3>
   <div class="project-carousel">
@@ -89,6 +89,26 @@
     <div class="project-card">
       <a href="projekt4.html">
         <img src="assets/images/projekt2-thumb.png" alt="Projekt 2">
+        <h4>Projekt 2: UI Sound Pack</h4>
+      </a>
+    </div>
+    <!-- weitere Cards -->
+  </div>
+</div>
+
+<!-- Projekt Kategorien 02 -->
+<div class="project-category">
+  <h3>Audio Programming</h3>
+  <div class="project-carousel">
+    <div class="project-card">
+      <a href="projekt1.html">
+        <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1">
+        <h4>Projekt 1: Game Soundscape</h4>
+      </a>
+    </div>
+    <div class="project-card">
+      <a href="projekt2.html">
+        <img src="assets/images//Moai-01.png" alt="Projekt 2">
         <h4>Projekt 2: UI Sound Pack</h4>
       </a>
     </div>
