--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h3>Projekt 2: App Audio Engine</h3>
     </a>
   </div>
-  
+
 </section>
   
 <!-- Projekt Kategorien -->
@@ -88,7 +88,7 @@
     </div>
     <div class="project-card">
       <a href="projekt4.html">
-        <img src="assets/images/projekt2-thumb.png" alt="Projekt 2">
+        <img src="assets/images/Krotos-01.png" alt="Projekt 2">
         <h4>Projekt 2: UI Sound Pack</h4>
       </a>
     </div>
@@ -102,14 +102,34 @@
   <div class="project-carousel">
     <div class="project-card">
       <a href="projekt1.html">
-        <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1">
+        <img src="assets/images/Daisy-01" alt="Projekt 1">
         <h4>Projekt 1: Game Soundscape</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt2.html">
-        <img src="assets/images//Moai-01.png" alt="Projekt 2">
+        <img src="assets/images/Sinitus-01" alt="Projekt 2">
         <h4>Projekt 2: UI Sound Pack</h4>
+      </a>
+    </div>
+    <!-- weitere Cards -->
+  </div>
+</div>
+
+  <!-- Projekt Kategorien 03 -->
+<div class="project-category">
+  <h3>Film</h3>
+  <div class="project-carousel">
+    <div class="project-card">
+      <a href="projekt1.html">
+        <img src="assets/images/Antiheld-01" alt="Projekt 1">
+        <h4>Antiheld</h4>
+      </a>
+    </div>
+    <div class="project-card">
+      <a href="projekt2.html">
+        <img src="assets/images/DSudF-01" alt="Projekt 2">
+        <h4>Der Saal unter dem Fluss</h4>
       </a>
     </div>
     <!-- weitere Cards -->
