--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Projekt 1 -->
   <div class="project-card">
     <a href="project1.html">
-      <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1 Vorschaubild">
+      <img src="assets/images/SpiritusMundi-01.png?v=2" alt="Projekt 1 Vorschaubild">
       <h3>Greed</h3>
     </a>
   </div>
@@ -48,7 +48,7 @@
   <!-- Projekt 2 -->
   <div class="project-card">
     <a href="project2.html">
-      <img src="assets/images/Moai-01.png" alt="Projekt 2 Vorschaubild">
+      <img src="assets/images/Moai-01.png?v=2" alt="Projekt 2 Vorschaubild">
       <h3>Projekt 2: App Audio Engine</h3>
     </a>
   </div>
@@ -70,25 +70,25 @@
   <div class="project-carousel">
     <div class="project-card">
       <a href="projekt1.html">
-        <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1">
+        <img src="assets/images/SpiritusMundi-01.png?v=2" alt="Projekt 1">
         <h4>Projekt 1: Game Soundscape</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt2.html">
-        <img src="assets/images//Moai-01.png" alt="Projekt 2">
+        <img src="assets/images//Moai-01.png?v=2" alt="Projekt 2">
         <h4>Projekt 2: UI Sound Pack</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt3.html">
-        <img src="assets/images/Greed-01.png" alt="Projekt 2">
+        <img src="assets/images/Greed-01.png?v=2" alt="Projekt 2">
         <h4>Projekt 3: Greed</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt4.html">
-        <img src="assets/images/Krotos-01.png" alt="Projekt 2">
+        <img src="assets/images/Krotos-01.png?v=2" alt="Projekt 2">
         <h4>Projekt 2: UI Sound Pack</h4>
       </a>
     </div>
@@ -102,13 +102,13 @@
   <div class="project-carousel">
     <div class="project-card">
       <a href="projekt1.html">
-        <img src="assets/images/Daisy-01" alt="Projekt 1">
+        <img src="assets/images/Daisy-01.png" alt="Projekt 1">
         <h4>Projekt 1: Game Soundscape</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt2.html">
-        <img src="assets/images/Sinitus-01" alt="Projekt 2">
+        <img src="assets/images/Sinitus-01.png" alt="Projekt 2">
         <h4>Projekt 2: UI Sound Pack</h4>
       </a>
     </div>
@@ -122,13 +122,13 @@
   <div class="project-carousel">
     <div class="project-card">
       <a href="projekt1.html">
-        <img src="assets/images/Antiheld-01" alt="Projekt 1">
+        <img src="assets/images/Antiheld-01.png" alt="Projekt 1">
         <h4>Antiheld</h4>
       </a>
     </div>
     <div class="project-card">
       <a href="projekt2.html">
-        <img src="assets/images/DSudF-01" alt="Projekt 2">
+        <img src="assets/images/DSudF-01.png" alt="Projekt 2">
         <h4>Der Saal unter dem Fluss</h4>
       </a>
     </div>
