--- a/index.html
+++ b/index.html
@@ -61,6 +61,25 @@
     </a>
   </div>
 
+<section id="projects">
+  <h2>Meine Projekte</h2>
+  <div class="project-grid">
+    <a href="projekte/projekt1.html" class="project-card">
+      <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1 Thumbnail">
+      <h3>Projekt 1</h3>
+    </a>
+    <a href="projekte/projekt2.html" class="project-card">
+      <img src="assets/images/Moai-01.png" alt="Projekt 2 Thumbnail">
+      <h3>Projekt 2</h3>
+    </a>
+    <a href="projekte/projekt3.html" class="project-card">
+      <img src="assets/images/Moai-01.png" alt="Projekt 3 Thumbnail">
+      <h3>Projekt 3</h3>
+    </a>
+    <!-- beliebig viele Kacheln hinzufügen -->
+  </div>
+</section>
+  
 </section>
   
 <!-- Projekt Kategorien -->
