--- a/index.html
+++ b/index.html
@@ -69,6 +69,35 @@
   </div>
 </div>
 
+<!-- Container -->
+
+  <div class="container">
+  <section class="category">
+    <h2>Sound Design</h2>
+    <div class="project-row">
+         <div class="project-card">
+      <a href="projekt2.html">
+        <img src="assets/images//Moai-01.png?v=2" alt="Projekt 2">
+        <h4>Projekt 2: UI Sound Pack</h4>
+      </a>
+    </div>
+    <div class="project-card">
+      <a href="projekt3.html">
+        <img src="assets/images/Greed-01.png?v=2" alt="Projekt 2">
+        <h4>Projekt 3: Greed</h4>
+      </a>
+    </div>
+    <div class="project-card">
+      <a href="projekt4.html">
+        <img src="assets/images/Krotos-01.png?v=2" alt="Projekt 2">
+        <h4>Projekt 2: UI Sound Pack</h4>
+      </a>
+    </div>
+      <!-- Cards hier -->
+    </div>
+  </section>
+
+    
 <!-- Projekt Kategorien 02 -->
 <div class="project-category">
   <h3>Audio Programming</h3>
