--- a/index.html
+++ b/index.html
@@ -33,7 +33,68 @@
     <h2>About Me</h2>
     <p>Text and Tools i use.</p>
   </section>
-  
+
+<div class="container">
+
+  <!-- Kategorie 1 -->
+  <section class="category">
+    <h2>Sound Design</h2>
+    <div class="project-row">
+      <a href="projekte/projekt1.html" class="project-card">
+        <img src="assets/images/projekt1.png" alt="Projekt 1">
+        <h3>Projekt 1</h3>
+      </a>
+      <a href="projekte/projekt2.html" class="project-card">
+        <img src="assets/images/projekt2.png" alt="Projekt 2">
+        <h3>Projekt 2</h3>
+      </a>
+      <a href="projekte/projekt3.html" class="project-card">
+        <img src="assets/images/projekt3.png" alt="Projekt 3">
+        <h3>Projekt 3</h3>
+      </a>
+    </div>
+  </section>
+
+  <!-- Kategorie 2 -->
+  <section class="category">
+    <h2>Audio Produktion</h2>
+    <div class="project-row">
+      <a href="projekte/projekt4.html" class="project-card">
+        <img src="assets/images/projekt4.png" alt="Projekt 4">
+        <h3>Projekt 4</h3>
+      </a>
+      <a href="projekte/projekt5.html" class="project-card">
+        <img src="assets/images/projekt5.png" alt="Projekt 5">
+        <h3>Projekt 5</h3>
+      </a>
+      <a href="projekte/projekt6.html" class="project-card">
+        <img src="assets/images/projekt6.png" alt="Projekt 6">
+        <h3>Projekt 6</h3>
+      </a>
+    </div>
+  </section>
+
+  <!-- Kategorie 3 -->
+  <section class="category">
+    <h2>Audio Programmierung</h2>
+    <div class="project-row">
+      <a href="projekte/projekt7.html" class="project-card">
+        <img src="assets/images/projekt7.png" alt="Projekt 7">
+        <h3>Projekt 7</h3>
+      </a>
+      <a href="projekte/projekt8.html" class="project-card">
+        <img src="assets/images/projekt8.png" alt="Projekt 8">
+        <h3>Projekt 8</h3>
+      </a>
+      <a href="projekte/projekt9.html" class="project-card">
+        <img src="assets/images/projekt9.png" alt="Projekt 9">
+        <h3>Projekt 9</h3>
+      </a>
+    </div>
+  </section>
+
+</div>
+
 </section>
   
 <!-- Projekt Kategorien -->
