--- a/index.html
+++ b/index.html
@@ -94,3 +94,13 @@
   </section>
 
 </div>
+
+   <!-- Footer / Kontakt -->
+  <footer id="contact">
+    <h2>Kontakt</h2>
+    <p>Email: <a href="mailto:mail@beispiel.de">mail@beispiel.de</a></p>
+    <p>LinkedIn | GitHub | SoundCloud</p>
+  </footer>
+
+</body>
+</html>
