--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <h2>Sound Design</h2>
     <div class="project-row">
       <a href="projekte/projekt1.html" class="project-card">
-        <img src="assets/images/projekt1.png" alt="Projekt 1">
+        <img src="assets/images/SpiritusMundi-01.png" alt="Projekt 1">
         <h3>Projekt 1</h3>
       </a>
       <a href="projekte/projekt2.html" class="project-card">
-        <img src="assets/images/projekt2.png" alt="Projekt 2">
+        <img src="assets/images/Moai-01.png" alt="Projekt 2">
         <h3>Projekt 2</h3>
       </a>
       <a href="projekte/projekt3.html" class="project-card">
-        <img src="assets/images/projekt3.png" alt="Projekt 3">
+        <img src="assets/images/Krotos-01.png" alt="Projekt 3">
         <h3>Projekt 3</h3>
       </a>
     </div>
@@ -57,18 +57,18 @@
 
   <!-- Kategorie 2 -->
   <section class="category">
-    <h2>Audio Produktion</h2>
+    <h2>Audio Programming</h2>
     <div class="project-row">
       <a href="projekte/projekt4.html" class="project-card">
-        <img src="assets/images/projekt4.png" alt="Projekt 4">
+        <img src="assets/images/Daisy-01.png" alt="Projekt 4">
         <h3>Projekt 4</h3>
       </a>
       <a href="projekte/projekt5.html" class="project-card">
-        <img src="assets/images/projekt5.png" alt="Projekt 5">
+        <img src="assets/images/Sinitus-01.png" alt="Projekt 5">
         <h3>Projekt 5</h3>
       </a>
       <a href="projekte/projekt6.html" class="project-card">
-        <img src="assets/images/projekt6.png" alt="Projekt 6">
+        <img src="assets/images/Greed-01.png" alt="Projekt 6">
         <h3>Projekt 6</h3>
       </a>
     </div>
@@ -76,14 +76,14 @@
 
   <!-- Kategorie 3 -->
   <section class="category">
-    <h2>Audio Programmierung</h2>
+    <h2>Film and Postproduction</h2>
     <div class="project-row">
       <a href="projekte/projekt7.html" class="project-card">
-        <img src="assets/images/projekt7.png" alt="Projekt 7">
+        <img src="assets/images/Antiheld-01.png" alt="Projekt 7">
         <h3>Projekt 7</h3>
       </a>
       <a href="projekte/projekt8.html" class="project-card">
-        <img src="assets/images/projekt8.png" alt="Projekt 8">
+        <img src="assets/images/DSudF-01.png" alt="Projekt 8">
         <h3>Projekt 8</h3>
       </a>
       <a href="projekte/projekt9.html" class="project-card">
