--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h3>Projekt 8</h3>
       </a>
       <a href="projekte/projekt9.html" class="project-card">
-        <img src="assets/images/projekt9.png" alt="Projekt 9">
+        <img src="assets/images/TGE-01.png" alt="Projekt 9">
         <h3>Projekt 9</h3>
       </a>
     </div>
